Fix spacing in projects page

--- a/src/components/projects/projecttext.css
+++ b/src/components/projects/projecttext.css
@@ -43,5 +43,4 @@
   margin-left: 4%;
   margin-right: 4%;
   margin-top: 20px;
-  bottom: 10px;
 }
